beta 7.5.2
VersionControl
======

changed merge algorithm

**********

beta 7.5.1

fixed build, included util/Time in core package
changed the name of main.jar back to Main.jar for future updates

**********
beta 7.5

AbcPlayer
======

removed .exe for AbcPlayer - no abc is loaded

core
======

added some tooltips on selection of modules
the URL of github has been changed again, old one causes 404 error
**********

beta 7.4

SongbookUpater
======

more detailed error message if the given directory can not be found

**********
beta 7.3

AbcCreator
======

replaced built-in BruTE version 17 with version 18

**********

beta 7.2

core
======

fixed bug to launch the tool with "java -jar SToNe.jar" on the command line

SongbookUpdater
======

added some output for debugging

**********

beta 7.1

core
=======

implemented renaming a bit more fault tolerant

AbcCreator
=======

operational changes; moved local parameters