@@ -51,6 +51,7 @@ import stone.util.PathOptionFileFilter;
 import stone.util.StringOption;
 import stone.util.TaskPool;
 
+
 /**
  * @author Nelphindal
  */
@@ -95,25 +96,32 @@ public class AbcCreator implements Module,
 		Object state = InitState.INIT;
 
 		private String getMessage() {
-			if (state == InitState.DRUM_MAP)
+			if (state == InitState.DRUM_MAP) {
 				return "Copying drum-maps to working dir";
-			if (state == InitState.UNPACK_JAR)
+			}
+			if (state == InitState.UNPACK_JAR) {
 				return "Unpacking BruTE";
-			if (state == InitState.INIT)
+			}
+			if (state == InitState.INIT) {
 				return "Init";
-			if (state == "INSTRUMENT_MAP")
+			}
+			if (state == "INSTRUMENT_MAP") {
 				return "Parsing instrument-map";
-			if (state == "DRUM_MAP")
+			}
+			if (state == "DRUM_MAP") {
 				return "Parsing drum-maps";
-			if (state == InitState.READ_JAR)
+			}
+			if (state == InitState.READ_JAR) {
 				return "Reading BruTE-archive";
+			}
 			return "...";
 		}
 
 		synchronized final void drawState(final IOHandler io) {
 			this.io = io;
-			if (failed)
+			if (failed) {
 				return;
+			}
 			io.startProgress(getMessage(), size);
 			io.updateProgress(progress);
 		}
@@ -184,11 +192,14 @@ public class AbcCreator implements Module,
 	 */
 	public static final int DRUM_MAPS_COUNT = 6;
 
-	private static final PathOptionFileFilter EXEC_JAR_FILTER = new ExecutableJarFileFilter();
+	private static final PathOptionFileFilter EXEC_JAR_FILTER =
+			new ExecutableJarFileFilter();
 
-	private static final PathOptionFileFilter DRUM_MAP_FILTER = new DrumMapFileFilter();
+	private static final PathOptionFileFilter DRUM_MAP_FILTER =
+			new DrumMapFileFilter();
 
-	private static final PathOptionFileFilter INSTR_MAP_FILTER = new InstrumentMapFileFilter();
+	private static final PathOptionFileFilter INSTR_MAP_FILTER =
+			new InstrumentMapFileFilter();
 
 	private final static int VERSION = 6;
 
@@ -196,18 +207,20 @@ public class AbcCreator implements Module,
 
 	private static final Path javaPath = AbcCreator.getJavaPath();
 
-	private final static PathOption createDrumMaps(
-			final OptionContainer optionContainer, final TaskPool taskPool) {
+	private final static PathOption
+			createDrumMaps(final OptionContainer optionContainer,
+					final TaskPool taskPool) {
 		final PathOptionFileFilter ff = AbcCreator.DRUM_MAP_FILTER;
 		return new PathOption(optionContainer, taskPool, "drumMapsDir",
-				"Select a directory containing default drum maps", "Drum Maps",
-				Flag.NoShortFlag, "drums", ff,
+				"Select a directory containing default drum maps",
+				"Drum Maps", Flag.NoShortFlag, "drums", ff,
 				JFileChooser.FILES_AND_DIRECTORIES, AbcCreator.SECTION,
 				AbcCreator.DRUM_MAP_KEY, null);
 	}
 
-	private final static PathOption createInstrMap(
-			final OptionContainer optionContainer, final TaskPool taskPool) {
+	private final static PathOption
+			createInstrMap(final OptionContainer optionContainer,
+					final TaskPool taskPool) {
 		final PathOptionFileFilter ff = AbcCreator.INSTR_MAP_FILTER;
 		return new PathOption(
 				optionContainer,
@@ -215,20 +228,22 @@ public class AbcCreator implements Module,
 				"midi2abcMap",
 				"Select a custom map, to map midi-instruments on the isntruments used in LoTRO",
 				"Instrument Map", Flag.NoShortFlag, "mapping", ff,
-				JFileChooser.FILES_ONLY, AbcCreator.SECTION, "instrumentMap",
-				null);
+				JFileChooser.FILES_ONLY, AbcCreator.SECTION,
+				"instrumentMap", null);
 	}
 
-	private final static PathOption createPathToAbcPlayer(
-			final OptionContainer optionContainer, final TaskPool taskPool) {
+	private final static PathOption
+			createPathToAbcPlayer(final OptionContainer optionContainer,
+					final TaskPool taskPool) {
 		final PathOptionFileFilter ff = AbcCreator.EXEC_JAR_FILTER;
 		return new PathOption(
 				optionContainer,
 				taskPool,
 				"abcPlayer",
 				"The path to the abc-player. Leave it blank if you dont have an abc-player or you do not want to play songs to test",
-				"Abc-Player", 'a', "abc-player", ff, JFileChooser.FILES_ONLY,
-				AbcCreator.SECTION, "player", null);
+				"Abc-Player", 'a', "abc-player", ff,
+				JFileChooser.FILES_ONLY, AbcCreator.SECTION, "player",
+				null);
 	}
 
 	private final static StringOption createStyle(
@@ -242,9 +257,11 @@ public class AbcCreator implements Module,
 	}
 
 	private final static Path getJavaPath() {
-		final Path javaBin = Path.getPath(
-				System.getProperty("java.home").split(
-						"\\" + FileSystem.getFileSeparator())).resolve("bin");
+		final Path javaBin =
+				Path.getPath(
+						System.getProperty("java.home").split(
+								"\\" + FileSystem.getFileSeparator()))
+						.resolve("bin");
 		final Path javaPath_;
 		if (FileSystem.type == FileSystem.OSType.WINDOWS) {
 			javaPath_ = javaBin.resolve("java.exe");
@@ -322,14 +339,18 @@ public class AbcCreator implements Module,
 	 * @param sc
 	 * @throws InterruptedException
 	 */
-	public AbcCreator(final StartupContainer sc) throws InterruptedException {
-		ABC_PLAYER = AbcCreator.createPathToAbcPlayer(sc.getOptionContainer(),
-				sc.getTaskPool());
-		INSTRUMENT_MAP = AbcCreator.createInstrMap(sc.getOptionContainer(),
-				sc.getTaskPool());
+	public AbcCreator(final StartupContainer sc)
+			throws InterruptedException {
+		ABC_PLAYER =
+				AbcCreator.createPathToAbcPlayer(sc.getOptionContainer(),
+						sc.getTaskPool());
+		INSTRUMENT_MAP =
+				AbcCreator.createInstrMap(sc.getOptionContainer(), sc
+						.getTaskPool());
 		STYLE = AbcCreator.createStyle(sc.getOptionContainer());
-		DRUM_MAPS = AbcCreator.createDrumMaps(sc.getOptionContainer(),
-				sc.getTaskPool());
+		DRUM_MAPS =
+				AbcCreator.createDrumMaps(sc.getOptionContainer(), sc
+						.getTaskPool());
 		TITLE = null;
 		wdDir = sc.getWorkingDir();
 		io = sc.getIO();
@@ -353,17 +374,18 @@ public class AbcCreator implements Module,
 		INSTRUMENT_MAP = abc.INSTRUMENT_MAP;
 		STYLE = abc.STYLE;
 		DRUM_MAPS = abc.DRUM_MAPS;
-		TITLE = new StringOption(null, null, "Title displayed in the abc",
-				"Title", Flag.NoShortFlag, Flag.NoLongFlag, AbcCreator.SECTION,
-				"title", null);
+		TITLE =
+				new StringOption(null, null, "Title displayed in the abc",
+						"Title", Flag.NoShortFlag, Flag.NoLongFlag,
+						AbcCreator.SECTION, "title", null);
 		wdDir = abc.wdDir;
 		taskPool = abc.taskPool;
 		bruteDir = abc.bruteDir;
 		brutesMidi = bruteDir.resolve("mid.mid");
 		brutesMap = bruteDir.resolve("out.config");
 		brutesAbc = bruteDir.resolve("new.abc");
-		dragAndDropPlugin = new AbcMapPlugin(this, taskPool, parser, targets,
-				io);
+		dragAndDropPlugin =
+				new AbcMapPlugin(this, taskPool, parser, targets, io);
 		initState = abc.initState;
 		main = abc.main;
 	}
@@ -380,10 +402,11 @@ public class AbcCreator implements Module,
 	public final Object call_back(final Object name, final Object title,
 			int abcTracks) {
 		io.startProgress("Creating map", abcTracks + 1);
-		final Path map = generateMap(name == null ? "<insert your name here>"
-				: name, title == null ? abc.getFileName() : title);
+		final Path map =
+				generateMap(name == null ? "<insert your name here>"
+						: name, title == null ? abc.getFileName() : title);
 		io.endProgress();
-		if (map == null)
+		if (map == null) {
 			// no abc-tracks
 			return new Object() {
 				@Override
@@ -391,6 +414,7 @@ public class AbcCreator implements Module,
 					return "empty file";
 				}
 			};
+		}
 		System.out.println("generated map " + map);
 		try {
 			copy(map, brutesMap);
@@ -409,8 +433,9 @@ public class AbcCreator implements Module,
 		brutesAbc.renameTo(abc);
 		brutesMidi.delete();
 		brutesMap.delete();
-		if (master.isInterrupted())
+		if (master.isInterrupted()) {
 			return null;
+		}
 		if (name == null) {
 			// test
 			try {
@@ -483,7 +508,8 @@ public class AbcCreator implements Module,
 
 	/** */
 	@Override
-	public final void link(final DragObject<JPanel, JPanel, JPanel> object,
+	public final void link(
+			final DragObject<JPanel, JPanel, JPanel> object,
 			final DropTarget<JPanel, JPanel, JPanel> target) {
 		dragAndDropPlugin.link(object, target);
 	}
@@ -506,68 +532,74 @@ public class AbcCreator implements Module,
 
 			final void parseLine(final String line) {
 				switch (state) {
-				case 0x7000_0000:
-					return;
-				case 0:
-					if (line.startsWith("Name: ")) {
-						TITLE.value(line.substring(6).trim());
-					} else if (line.startsWith("Speedup: ")) {
-						BruteParams.SPEED.value(line.substring(8).trim(), io);
-					} else if (line.startsWith("Pitch: ")) {
-						BruteParams.PITCH.value(line.substring(6).trim(), io);
-					} else if (line.startsWith("Style: ")) {
-						STYLE.value(line.substring(7));
-					} else if (line.startsWith("Volume: ")) {
-						BruteParams.VOLUME.value(line.substring(7).trim(), io);
-					} else if (line.startsWith("Compress: ")) {
-						BruteParams.DYNAMIC
-								.value(line.substring(10).trim(), io);
-					} else if (line.startsWith("abctrack begin")) {
-						++state;
-						// } else if (line.startsWith("fadeout length ")) {
-						// TODO add support when needed
-					} else
+					case 0x7000_0000:
 						return;
-					break;
-				case 1:
-					if (line.startsWith("duration ")) {
-						// TODO support of duration
-						break;
-					} else if (line.startsWith("polyphony ")) {
-						// TODO support of polyphony
-						break;
-					} else {
-						if (line.startsWith("instrument ")) {
-							state = 2;
-							parseLine(line);
+					case 0:
+						if (line.startsWith("Name: ")) {
+							TITLE.value(line.substring(6).trim());
+						} else if (line.startsWith("Speedup: ")) {
+							BruteParams.SPEED.value(line.substring(8)
+									.trim(), io);
+						} else if (line.startsWith("Pitch: ")) {
+							BruteParams.PITCH.value(line.substring(6)
+									.trim(), io);
+						} else if (line.startsWith("Style: ")) {
+							STYLE.value(line.substring(7));
+						} else if (line.startsWith("Volume: ")) {
+							BruteParams.VOLUME.value(line.substring(7)
+									.trim(), io);
+						} else if (line.startsWith("Compress: ")) {
+							BruteParams.DYNAMIC.value(line.substring(10)
+									.trim(), io);
+						} else if (line.startsWith("abctrack begin")) {
+							++state;
+							// } else if (line.startsWith("fadeout length ")) {
+							// TODO add support when needed
+						} else {
+							return;
 						}
-						return;
-					}
-				case 2:
-					if (!line.startsWith("instrument ")) {
-						state = 0x7000_0000;
-						return;
-					}
-					final String s0 = line.substring(11).trim();
+						break;
+					case 1:
+						if (line.startsWith("duration ")) {
+							// TODO support of duration
+							break;
+						} else if (line.startsWith("polyphony ")) {
+							// TODO support of polyphony
+							break;
+						} else {
+							if (line.startsWith("instrument ")) {
+								state = 2;
+								parseLine(line);
+							}
+							return;
+						}
+					case 2:
+						if (!line.startsWith("instrument ")) {
+							state = 0x7000_0000;
+							return;
+						}
+						final String s0 = line.substring(11).trim();
 
-					c.addPart(s0);
+						c.addPart(s0);
 
-					state = 3;
-					break;
-				case 3:
-					if (line.startsWith("miditrack")) {
-						c.addEntry(line.substring(10));
-					} else if (line.startsWith("abctrack end")) {
-						state = 7;
-					} else
-						return;
-					break;
-				case 7:
-					if (line.startsWith("abctrack begin")) {
-						state = 1;
-					} else
-						return;
-					break;
+						state = 3;
+						break;
+					case 3:
+						if (line.startsWith("miditrack")) {
+							c.addEntry(line.substring(10));
+						} else if (line.startsWith("abctrack end")) {
+							state = 7;
+						} else {
+							return;
+						}
+						break;
+					case 7:
+						if (line.startsWith("abctrack begin")) {
+							state = 1;
+						} else {
+							return;
+						}
+						break;
 				}
 				System.out.println(". " + line);
 			}
@@ -632,8 +664,9 @@ public class AbcCreator implements Module,
 			initState.drawState(io);
 			taskPool.waitForTasks();
 			io.startProgress("Preparing launch", -1);
-			if (initState.failed() || master.isInterrupted())
+			if (initState.failed() || master.isInterrupted()) {
 				return;
+			}
 			final Path instrumentMap = INSTRUMENT_MAP.getValue();
 			final Path drumMaps = DRUM_MAPS.getValue();
 			if (instrumentMap != null) {
@@ -669,7 +702,8 @@ public class AbcCreator implements Module,
 
 	/** */
 	@Override
-	public final TreeSet<DropTarget<JPanel, JPanel, JPanel>> sortedTargets() {
+	public final TreeSet<DropTarget<JPanel, JPanel, JPanel>>
+			sortedTargets() {
 		return dragAndDropPlugin.targets();
 	}
 
@@ -695,49 +729,55 @@ public class AbcCreator implements Module,
 	private final int call(final Path location, final CallType type,
 			final Path wd, final String... cmd) throws IOException,
 			InterruptedException {
-		if (master.isInterrupted())
+		if (master.isInterrupted()) {
 			return -127;
-		if (Thread.currentThread().isInterrupted())
+		}
+		if (Thread.currentThread().isInterrupted()) {
 			return -1;
+		}
 		final Process p;
 		switch (type) {
-		case JAR:
-		case JAR_WAIT:
-			final ProcessBuilder pb;
-			final String player;
-			if (location.toString().contains(" ")) {
-				if (FileSystem.type == FileSystem.OSType.WINDOWS) {
-					player = "\"" + location.toString() + "\"";
-				} else {
-					player = location.toString().replaceAll(" ", "\\\\ ");
-				}
-			} else {
-				player = location.toString();
-			}
-			pb = new ProcessBuilder(AbcCreator.javaPath.toString(), "-jar",
-					player);
-			for (final String c : cmd) {
-				if (c.contains(" ")) {
+			case JAR:
+			case JAR_WAIT:
+				final ProcessBuilder pb;
+				final String player;
+				if (location.toString().contains(" ")) {
 					if (FileSystem.type == FileSystem.OSType.WINDOWS) {
-						pb.command().add("\"" + c + "\"");
+						player = "\"" + location.toString() + "\"";
 					} else {
-						pb.command().add(c.replaceAll(" ", "\\ "));
+						player =
+								location.toString().replaceAll(" ",
+										"\\\\ ");
 					}
 				} else {
-					pb.command().add(c);
+					player = location.toString();
 				}
-			}
-			pb.directory(location.getParent().toFile());
-			p = pb.start();
-			break;
-		case EXE:
-		case EXE_WAIT:
-			// TODO check if Windows if not, check for wine or similar ...
-			p = Runtime.getRuntime().exec(location.toString(), null,
-					wd.toFile());
-			break;
-		default:
-			return -1;
+				pb =
+						new ProcessBuilder(AbcCreator.javaPath.toString(),
+								"-jar", player);
+				for (final String c : cmd) {
+					if (c.contains(" ")) {
+						if (FileSystem.type == FileSystem.OSType.WINDOWS) {
+							pb.command().add("\"" + c + "\"");
+						} else {
+							pb.command().add(c.replaceAll(" ", "\\ "));
+						}
+					} else {
+						pb.command().add(c);
+					}
+				}
+				pb.directory(location.getParent().toFile());
+				p = pb.start();
+				break;
+			case EXE:
+			case EXE_WAIT:
+				// TODO check if Windows if not, check for wine or similar ...
+				p =
+						Runtime.getRuntime().exec(location.toString(),
+								null, wd.toFile());
+				break;
+			default:
+				return -1;
 		}
 		final java.io.InputStream is = p.getInputStream();
 		final java.io.InputStream es = p.getErrorStream();
@@ -749,26 +789,26 @@ public class AbcCreator implements Module,
 		final StreamPrinter pE = new StreamPrinter(es, outErr, true);
 		final StreamPrinter pS;
 		switch (type) {
-		case JAR:
-		case EXE:
-			pS = new StreamPrinter(is, outStd, false);
-			new Thread() {
+			case JAR:
+			case EXE:
+				pS = new StreamPrinter(is, outStd, false);
+				new Thread() {
 
-				@Override
-				public void run() {
-					pE.run();
-				}
+					@Override
+					public void run() {
+						pE.run();
+					}
 
-			}.start();
-			new Thread() {
+				}.start();
+				new Thread() {
 
-				@Override
-				public void run() {
-					pS.run();
-				}
-			}.start();
-			return 0;
-		default:
+					@Override
+					public void run() {
+						pS.run();
+					}
+				}.start();
+				return 0;
+			default:
 
 		}
 		pS = new StreamPrinter(is, outStd, false) {
@@ -791,7 +831,8 @@ public class AbcCreator implements Module,
 					lines[0] = line.substring(0, line.length() - 2);
 				}
 				if (line.contains("/")) {
-					final String[] s = line.replaceFirst("\r\n", "").split("/");
+					final String[] s =
+							line.replaceFirst("\r\n", "").split("/");
 					if (first) {
 						first = false;
 						io.setProgressSize(Integer.parseInt(s[1]) + 1);
@@ -850,7 +891,8 @@ public class AbcCreator implements Module,
 
 	@SuppressWarnings("resource")
 	private final Path generateMap(final Object name, final Object title) {
-		final Path map = midi.getParent().resolve(midi.getFileName() + ".map");
+		final Path map =
+				midi.getParent().resolve(midi.getFileName() + ".map");
 		final OutputStream out = io.openOut(map.toFile());
 		final String style = STYLE.value();
 
@@ -860,29 +902,31 @@ public class AbcCreator implements Module,
 		io.writeln(out, "Style: " + style);
 		io.writeln(out, "Volume: " + BruteParams.VOLUME.value());
 		io.writeln(out, "Compress: " + BruteParams.DYNAMIC.value());
-		io.writeln(out,
+		io.writeln(
+				out,
 				"%no pitch guessing   %uncomment to switch off guessing of default octaves");
 		io.writeln(
 				out,
 				"%no back folding     %uncomment to switch off folding of tone-pitches inside the playable region");
 		io.writeln(out, "fadeout length 0    %unoperational still!!!!");
 		io.writeln(out, String.format("Transcriber : %s", name));
-		final Map<DragObject<JPanel, JPanel, JPanel>, Integer> abcPartMap = new HashMap<>();
+		final Map<DragObject<JPanel, JPanel, JPanel>, Integer> abcPartMap =
+				new HashMap<>();
 		boolean empty = true;
 		io.updateProgress();
 
-		for (final Iterator<DropTargetContainer<JPanel, JPanel, JPanel>> targetIter = targets
-				.iterator();;) {
-			final DropTargetContainer<JPanel, JPanel, JPanel> target = targetIter
-					.next();
+		for (final Iterator<DropTargetContainer<JPanel, JPanel, JPanel>> targetIter =
+				targets.iterator();;) {
+			final DropTargetContainer<JPanel, JPanel, JPanel> target =
+					targetIter.next();
 			if (!targetIter.hasNext()) {
 				break;
 			}
 			for (final DropTarget<JPanel, JPanel, JPanel> t : target) {
 				empty = false;
 				final StringBuilder params = new StringBuilder();
-				for (final Map.Entry<String, Integer> param : t.getParams()
-						.entrySet()) {
+				for (final Map.Entry<String, Integer> param : t
+						.getParams().entrySet()) {
 					params.append(" ");
 					params.append(t.printParam(param));
 				}
@@ -890,8 +934,8 @@ public class AbcCreator implements Module,
 				io.writeln(out, "abctrack begin");
 				io.writeln(out, "polyphony 6 top");
 				io.writeln(out, "duration 2");
-				io.writeln(out, String.format("instrument %s%s",
-						target.toString(), params.toString()));
+				io.writeln(out, String.format("instrument %s%s", target
+						.toString(), params.toString()));
 				writeAbcTrack(out, t, abcPartMap);
 				io.writeln(out, "abctrack end");
 				io.updateProgress();
@@ -904,7 +948,8 @@ public class AbcCreator implements Module,
 		io.writeln(
 				out,
 				"% Polyphony sets the maximal number of simultanious tones for this instrument (6 is max)");
-		io.writeln(out,
+		io.writeln(
+				out,
 				"% Pitch is in semitones, to shift an octave up : pitch 12 or down  pitch -12");
 		io.writeln(
 				out,
@@ -919,7 +964,8 @@ public class AbcCreator implements Module,
 			initState.setSize(InitState.DRUM_MAP, files.length);
 			for (final String f : files) {
 				if (f.startsWith("drum") && f.endsWith(".drummap.txt")) {
-					final String idString = f.substring(4, f.length() - 12);
+					final String idString =
+							f.substring(4, f.length() - 12);
 					final int id;
 					try {
 						id = Integer.parseInt(idString);
@@ -932,7 +978,8 @@ public class AbcCreator implements Module,
 						@Override
 						public final void run() {
 							try {
-								copy(drumMaps.resolve(f), bruteDir.resolve(f));
+								copy(drumMaps.resolve(f), bruteDir
+										.resolve(f));
 
 								initState.progress();
 							} catch (final IOException e) {
@@ -953,17 +1000,23 @@ public class AbcCreator implements Module,
 	}
 
 	private final void runLoop() {
-		if (bruteDir == null)
+		if (bruteDir == null) {
 			return;
+		}
 		while (true) {
-			if (master.isInterrupted())
+			if (master.isInterrupted()) {
 				return;
-			midi = io.selectFile(
-					"Which midi do you want to transcribe to abc?",
-					midi == null ? Path.getPath(
-							main.getConfigValue(Main.GLOBAL_SECTION,
-									Main.PATH_KEY, null).split("/")).toFile()
-							: midi.getParent().toFile(), AbcCreator.midiFilter);
+			}
+			midi =
+					io.selectFile(
+							"Which midi do you want to transcribe to abc?",
+							midi == null ? Path.getPath(
+									main.getConfigValue(
+											Main.GLOBAL_SECTION,
+											Main.PATH_KEY, null)
+											.split("/")).toFile() : midi
+									.getParent().toFile(),
+							AbcCreator.midiFilter);
 			if (midi == null) {
 				break;
 			}
@@ -1011,8 +1064,9 @@ public class AbcCreator implements Module,
 			}
 			System.out.printf("%s -> %s\n", midi, abc);
 			io.handleGUIPlugin(dragAndDropPlugin);
-			if (master.isInterrupted())
+			if (master.isInterrupted()) {
 				return;
+			}
 			final String defaultTitle = midi.getFileName();
 			final List<Option> options = new ArrayList<>();
 
@@ -1021,17 +1075,21 @@ public class AbcCreator implements Module,
 			}
 			options.add(TITLE);
 			io.getOptions(options);
-			if (master.isInterrupted())
+			if (master.isInterrupted()) {
 				return;
-			final String name = main.getConfigValue(Main.GLOBAL_SECTION,
-					Main.NAME_KEY, null);
-			if (name == null)
+			}
+			final String name =
+					main.getConfigValue(Main.GLOBAL_SECTION,
+							Main.NAME_KEY, null);
+			if (name == null) {
 				return;
-			final Object result = call_back(name, TITLE.value(),
-					dragAndDropPlugin.size());
+			}
+			final Object result =
+					call_back(name, TITLE.value(), dragAndDropPlugin
+							.size());
 			if (result != null) {
-				io.printMessage(null, "transcribed\n" + midi + "\nto\n" + abc
-						+ "\n\n" + result.toString(), true);
+				io.printMessage(null, "transcribed\n" + midi + "\nto\n"
+						+ abc + "\n\n" + result.toString(), true);
 			}
 			dragAndDropPlugin.reset();
 		}
@@ -1041,16 +1099,18 @@ public class AbcCreator implements Module,
 	private final void unpack(final JarFile jarFile,
 			final ZipEntry... jarEntries) {
 		for (final ZipEntry jarEntry : jarEntries) {
-			if (master.isInterrupted())
+			if (master.isInterrupted()) {
 				return;
+			}
 
 			final OutputStream out;
 			final java.io.File file;
 			if (jarEntries.length == 1) {
 				file = bruteDir.resolve(jarEntry.getName()).toFile();
 			} else {
-				file = bruteDir.resolve(jarEntry.getName().substring(6))
-						.toFile();
+				file =
+						bruteDir.resolve(jarEntry.getName().substring(6))
+								.toFile();
 			}
 			if (!file.getParentFile().exists()) {
 				if (!file.getParentFile().mkdirs()) {
@@ -1075,20 +1135,24 @@ public class AbcCreator implements Module,
 		}
 	}
 
-	private final void writeAbcTrack(final OutputStream out,
-			final DropTarget<JPanel, JPanel, JPanel> abcTrack,
-			final Map<DragObject<JPanel, JPanel, JPanel>, Integer> abcPartMap) {
+	private final
+			void
+			writeAbcTrack(
+					final OutputStream out,
+					final DropTarget<JPanel, JPanel, JPanel> abcTrack,
+					final Map<DragObject<JPanel, JPanel, JPanel>, Integer> abcPartMap) {
 
 		for (final DragObject<JPanel, JPanel, JPanel> midiTrack : abcTrack) {
-			final Integer pitch = BruteParams.PITCH.getLocalValue(midiTrack,
-					abcTrack);
-			final Integer volume = BruteParams.VOLUME.getLocalValue(midiTrack,
-					abcTrack);
-			final Integer delay = BruteParams.DELAY.getLocalValue(midiTrack,
-					abcTrack);
+			final Integer pitch =
+					BruteParams.PITCH.getLocalValue(midiTrack, abcTrack);
+			final Integer volume =
+					BruteParams.VOLUME.getLocalValue(midiTrack, abcTrack);
+			final Integer delay =
+					BruteParams.DELAY.getLocalValue(midiTrack, abcTrack);
 			io.write(out, String.format(
-					"miditrack %d pitch %d volume %d delay %d",
-					Integer.valueOf(midiTrack.getId()), pitch, volume, delay));
+					"miditrack %d pitch %d volume %d delay %d", Integer
+							.valueOf(midiTrack.getId()), pitch, volume,
+					delay));
 			final int total = midiTrack.getTargets();
 			if (total > 1) {
 				int part = 0;
@@ -1096,8 +1160,8 @@ public class AbcCreator implements Module,
 					part = abcPartMap.get(midiTrack);
 				}
 				abcPartMap.put(midiTrack, part + 1);
-				io.writeln(out, String.format(" prio 100 " + "split %d %d",
-						total, part));
+				io.writeln(out, String.format(
+						" prio 100 " + "split %d %d", total, part));
 			} else {
 				io.write(out, "\r\n");
 			}
@@ -1110,22 +1174,27 @@ public class AbcCreator implements Module,
 		final Set<Path> filesAndDirs = new HashSet<>();
 		if (source.toFile().isDirectory()) {
 			if (destination.toFile().exists()
-					&& !destination.toFile().isDirectory())
+					&& !destination.toFile().isDirectory()) {
 				throw new IOException("Copying directory to file");
+			}
 			for (final String s : source.toFile().list()) {
 				if (!destination.toFile().exists()) {
-					if (!destination.toFile().mkdir())
-						throw new IOException("Unable to create directory "
-								+ destination);
+					if (!destination.toFile().mkdir()) {
+						throw new IOException(
+								"Unable to create directory "
+										+ destination);
+					}
 				}
 				filesAndDirs.add(destination.resolve(s));
 				taskPool.addTask(new Runnable() {
 					@Override
 					public final void run() {
-						if (master.isInterrupted())
+						if (master.isInterrupted()) {
 							return;
+						}
 						try {
-							copyRek(source.resolve(s), destination.resolve(s));
+							copyRek(source.resolve(s), destination
+									.resolve(s));
 						} catch (final IOException e) {
 							e.printStackTrace();
 						}
@@ -1155,9 +1224,11 @@ public class AbcCreator implements Module,
 			initState.incrementSize(files.length);
 			for (final String s : files) {
 				if (!destination.toFile().exists()) {
-					if (!destination.toFile().mkdir())
-						throw new IOException("Unable to create directory "
-								+ destination);
+					if (!destination.toFile().mkdir()) {
+						throw new IOException(
+								"Unable to create directory "
+										+ destination);
+					}
 				}
 				taskPool.addTask(new Runnable() {
 					@Override
@@ -1167,7 +1238,8 @@ public class AbcCreator implements Module,
 							return;
 						}
 						try {
-							copyRek(source.resolve(s), destination.resolve(s));
+							copyRek(source.resolve(s), destination
+									.resolve(s));
 						} catch (final IOException e) {
 							e.printStackTrace();
 						}
@@ -1193,11 +1265,12 @@ public class AbcCreator implements Module,
 			final Path bruteArchive = wdDir.resolve("BruTE.jar");
 			initState.startPhase(InitState.UNPACK_JAR);
 			if (!bruteArchive.exists()) {
-				final Path bruteArchive2 = bruteArchive.getParent().resolve(
-						"..", bruteArchive.getFileName());
+				final Path bruteArchive2 =
+						bruteArchive.getParent().resolve("..",
+								bruteArchive.getFileName());
 				if (!bruteArchive2.exists()) {
-					System.err.println("Unable to find Brute\n" + bruteArchive
-							+ " does not exist.");
+					System.err.println("Unable to find Brute\n"
+							+ bruteArchive + " does not exist.");
 					return false;
 				}
 				extract(bruteArchive2);
